adjust skeleton 2nd

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
 
 <div class="container-fluid">
-    <div class="top_bar" style="height: 200px">
-        top_bar
+    <div class="top_bar">
+        <img src="img/navbar.png">
     </div>
-    <div class="slick-track" style="height: 200px">
-        slick-track
-    </div>
-
-    <div class="section_wrapper" style="height: 200px">
-        section_wrapper
+    <div class="slick-track">
+        <img src="img/slide.png">
     </div>
 
-    <div class="widgets_wrapper" style="height: 200px">
-        widgets_wrapper
+    <div class="section_wrapper">
+        <img src="img/section.png">
+    </div>
+
+    <div class="widgets_wrapper">
+        <img src="img/footer.png">
     </div>
 </div>
 </body>
