--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
         <img src="img/section.png">
     </div>
 
-    <div class="widgets_wrapper">
-        <img src="img/footer.png">
-    </div>
+    <footer id="Footer" class="clearFix">
+        <div class="widgets_wrapper">
+            <div class="container">
+                <div class="column one-third"></div>
+                <div class="column one-third"></div>
+                <div class="column one-third"></div>
+            </div>
+        </div>
+        <div class="footer_copy">
+            <div class="container">
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
