update skeleton menubar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,63 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+<style>
+    *{
+        border:1px solid black;
+    }
+    .top_bar{
+        width: 2000px;
+    }
+    .colL{
+        margin-left: 500px;
+    }
+    .nav-item{
+        width: 100px;
+    }
+    .colR{
+        margin-right: 600px;
+    }
+    .logo{
+        padding: 100px;
+        margin-left: 20px;
+    }
+</style>
 <body>
 
 <div class="container-fluid">
     <div class="top_bar">
-        <img src="img/navbar.png">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto colL">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">THE HOTEL</a>
+                    </li>
+                    <li class="nav-item-sm-6">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ROOMS</a>
+                    </li>
+                </ul>
+                <a class="navbar-brand logo" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <form class="form-inline my-2 my-lg-0 colR">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">BISTRO <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">BUY NOW</a>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+        </nav>
     </div>
     <div class="slick-track">
         <img src="img/slide.png">
