update color text

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <style>
-    *{
+    /*{
         border:1px solid black;
-    }
+    }*/
     .top_bar{
         width: 2000px;
     }
@@ -26,9 +26,23 @@
         margin-right: 600px;
     }
     .logo{
-        padding: 100px;
-        margin-left: 20px;
+        padding: 80px;
+        margin-left: 0px;
     }
+    #navbarSupportedContent > ul > li:nth-child(3){
+        padding-left: 40px;!important;
+    }
+    .navbar .navbar-brand{
+        color: black;!important;
+    }
+    .navbar .navbar-nav li a{
+        color: black !important;
+    }
+    .navbar .navbar-nav li a:hover{
+        color: lightgreen !important ;
+    }
+
+
 </style>
 <body>
 
@@ -38,16 +52,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto colL">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="#" >HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">THE HOTEL</a>
                     </li>
-                    <li class="nav-item-sm-6">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ROOMS</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">ROOMS</a>
                     </li>
                 </ul>
-                <a class="navbar-brand logo" href="#">Navbar</a>
+                <a class="navbar-brand logo" href="#"><b><h3>WINTER</h3></b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -60,7 +74,7 @@
                             <a class="nav-link" href="#">CONTACT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">BUY NOW</a>
+                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">BUY NOW</a>
                         </li>
                     </ul>
                 </form>
