--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
         <img src="img/section.png">
     </div>
 
-    <footer id="Footer" class="clearFix">
-        <div class="widgets_wrapper">
-            <div class="container">
-                <div class="column one-third"></div>
-                <div class="column one-third"></div>
-                <div class="column one-third"></div>
+    <footer id="Footer" id="footer_copy">
+        <div class="container">
+            <div class="column one">
+                <div class="copyright">© 2019 BeHotel 4 - BeTheme. All Rights Reserved.</div>
+                <a href="index.html" target="_blank" rel="nofollow">Muffin group</a>
             </div>
-        </div>
-        <div class="footer_copy">
-            <div class="container">
-            </div>
+            <ul class="social"></ul>
         </div>
     </footer>
 </div>
