adjust css for footer

--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <style>
-        #carousel1 img{
-            width: 1024px;
-            height: 700px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
@@ -53,7 +47,7 @@
         <img src="img/section.png">
     </div>
 
-    <footer id="Footer" id="footer_copy">
+    <footer id="Footer" class="footer_copy">
         <div class="container">
             <div class="column one">
                 <div class="copyright">© 2019 BeHotel 4 - BeTheme. All Rights Reserved.</div>
@@ -62,6 +56,7 @@
             <ul class="social"></ul>
         </div>
     </footer>
+
 </div>
 </body>
 </html>
